# temporalex

./: .credo.exs  .formatter.exs  .gitignore  LICENSE  README.md  TODO.md  mix.exs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: config.exs
guides/advanced/: production.md
guides/introduction/: installation.md
guides/learning/: activities.md  child_workflows.md  configuration.md  error_handling.md  observability.md  signals_and_queries.md  testing.md  the_dsl.md  timers_and_scheduling.md  workflows.md
guides/recipes/: fan_out_fan_in.md  long_running_with_signals.md  safe_deployments.md  saga_pattern.md
lib/: temporalex.ex
lib/temporalex/: activity.ex  client.ex  codec.ex  connection.ex  converter.ex  dsl.ex  error.ex  failure_converter.ex  interceptor.ex  native.ex  open_telemetry.ex  retry_policy.ex  server.ex  telemetry.ex  testing.ex  workflow.ex  workflow_handle.ex  workflow_task_executor.ex
native/temporalex_native/: Cargo.toml
native/temporalex_native/src/: lib.rs
scripts/: gen-elixir-protos.sh
test/: test_helper.exs
test/support/: test_workflows.ex
test/temporalex/: activity_compile_test.exs  behaviour_test.exs  bugfix_review2_test.exs  bugfix_review_test.exs  bugfix_test.exs  client_bridge_test.exs  client_internals_test.exs  client_test.exs  codec_test.exs  connection_test.exs  context_test.exs  converter_test.exs  dsl_test.exs  ease_of_use_test.exs  error_test.exs  executor_test.exs  features_test.exs  interceptor_test.exs  retry_policy_test.exs  server_test.exs  (+5 more)
(+13 files in other folders)
